Adding PokeAPI to the project

--- a/src/components/navbar.module.scss
+++ b/src/components/navbar.module.scss
@@ -3,15 +3,25 @@
 .wrapper {
   background: m.$primary;
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 12px;
+  align-items: center;
   justify-content: space-between;
-  padding: 12px 10px 20px;
+  padding: 12px 24px 20px;
 }
 .header {
-  @include m.headline;
   display: flex;
   align-items: center;
-  column-gap: 10px;
+  column-gap: 16px;
   color: m.$white;
+  text-decoration: none;
+  cursor: pointer;
+  img {
+    width: 28px;
+  }
+  span {
+    @include m.headline;
+  }
 }
 .filter {
   display: flex;
@@ -21,41 +31,45 @@
 .input {
   background: m.$white;
   border: None;
-  border-radius: 16px;
-  height: 16px;
-  width: 120%;
-  padding: 8px 16px 8px 36px;
+  border-radius: 16px * 1.2;
+  height: 16px * 1.2;
+  width: 120% * 1.2;
+  padding: 8px * 1.2 16px * 1.2 8px * 1.2 36px * 1.2;
   @include m.shadow-inset;
   cursor: auto;
   color: m.$dark;
+  font-size: 12px * 1.2;
+  &:focus {
+    outline: none;
+  }
 }
 ::placeholder {
   font-family: Poppins;
   color: m.$medium;
 }
 .form {
-  width: 280px;
+  width: 280px * 1.2;
   display: flex;
   align-items: center;
   position: relative;
   img {
     position: absolute;
-    left: 8px;
-    width: 20px;
+    left: 8px * 1.2;
+    width: 20px * 1.2;
   }
 }
 .sortButton {
   background-color: m.$white;
   border-radius: 50%;
   border: none;
-  width: 32px;
-  height: 32px;
+  width: 32px * 1.2;
+  height: 32px * 1.2;
   display: flex;
   justify-content: center;
   align-items: center;
   @include m.shadow-inset;
   img {
-    width: 12px;
+    width: 12px * 1.2;
   }
   &:hover {
     box-shadow: none;
