--- a/src/components/pokeCard.module.scss
+++ b/src/components/pokeCard.module.scss
@@ -1,7 +1,45 @@
-@use '../styles/mixin.scss' as m;
+@use "../styles/mixin.scss" as m;
 
 .wrapper {
-  border: 1px solid black;
-  width: 104px;
-  height: 108px;
+  width: 104px * 2.0;
+  height: 108px * 2.0;
+  border-radius: 8px * 2.0;
+  position: relative;
+  @include m.shadow-2dp;
+  img {
+    z-index: 2;
+    width: 72px * 2.0;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+  }
+  transition: transform 0.3s, box-shadow 0.3s;
+  cursor: pointer;
+  &:hover {
+    transform: translate3D(0, -1px, 0) scale(1.03);
+    @include m.shadow-6dp;
+  }
+}
+.number {
+  text-align: right;
+  margin: 8px 16px;
+  @include m.caption;
+  color: m.$medium;
+}
+.name {
+  @include m.body3;
+  z-index: 2;
+  margin: 6px;
+}
+.background {
+  width: 100%;
+  height: 44px * 2.0;
+  background-color: #efefef;
+  border-radius: 8px * 2.0;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: absolute;
+  bottom: 0;
 }
