--- a/src/components/pokeLists.module.scss
+++ b/src/components/pokeLists.module.scss
@@ -8,8 +8,15 @@
   border-radius: 8px;
   @include m.shadow-inset;
   color: m.$dark;
+  overflow-y: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-content: flex-start;
+  row-gap: 16px;
+  column-gap: 16px;
+  flex-wrap: wrap;
 }
-.cards {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
+.empty {
+  width: 104px;
+  height: 108px;
 }
