--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,15 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color: m.$white;
-  background-color: m.$primary;
 }
-
 body {
+  margin: 0;
+  font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+p {
   margin: 0;
 }
 
@@ -19,15 +18,13 @@ body {
   border-radius: 6px;
   width: 16px;
 }
-::-webkit-scrollbar-track
-{
-	@include m.shadow-inset;
-	border-radius: 6px;
-	background-color: m.$white;
+::-webkit-scrollbar-track {
+  @include m.shadow-inset;
+  border-radius: 6px;
+  background-color: m.$white;
 }
-::-webkit-scrollbar-thumb
-{
-	border-radius: 6px;
-	@include m.shadow-inset;
-	background-color: m.$primary;
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  @include m.shadow-inset;
+  background-color: m.$primary;
 }
