--- a/src/styles/modules/layout.module.scss
+++ b/src/styles/modules/layout.module.scss
@@ -1,6 +1,9 @@
+@use "../mixin.scss" as m;
+
 .container {
   display: flex;
-  height: 100vh;
   flex-direction: column;
   align-items: stretch;
+  height: 100vh;
+  background-color: m.$primary;
 }
