--- a/src/styles/modules/pokeCard.module.scss
+++ b/src/styles/modules/pokeCard.module.scss
@@ -1,14 +1,16 @@
-@use "../styles/mixin.scss" as m;
+@use "../mixin.scss" as m;
 
 .wrapper {
-  width: 104px * 2.0;
-  height: 108px * 2.0;
-  border-radius: 8px * 2.0;
+  width: 104px * 2;
+  height: 108px * 2;
+  border-radius: 8px * 2;
   position: relative;
+  color: m.$dark;
+  text-decoration: none;
   @include m.shadow-2dp;
   img {
     z-index: 2;
-    width: 72px * 2.0;
+    width: 72px * 2;
     position: absolute;
     top: 40%;
     left: 50%;
@@ -34,9 +36,9 @@
 }
 .background {
   width: 100%;
-  height: 44px * 2.0;
+  height: 44px * 2;
   background-color: #efefef;
-  border-radius: 8px * 2.0;
+  border-radius: 8px * 2;
   display: flex;
   justify-content: center;
   align-items: flex-end;
