--- a/src/styles/modules/pokeCard.module.scss
+++ b/src/styles/modules/pokeCard.module.scss
@@ -1,8 +1,10 @@
 @use "../mixin.scss" as m;
 
 .wrapper {
-  width: 104px * 2;
-  height: 108px * 2;
+  // width: 104px * 2.2;
+  // height: 108px * 2.2;
+  width: 100%;
+  height: 108px * 2.2;
   border-radius: 8px * 2;
   position: relative;
   color: m.$dark;
@@ -10,7 +12,7 @@
   @include m.shadow-2dp;
   img {
     z-index: 2;
-    width: 72px * 2;
+    width: 72%;
     position: absolute;
     top: 40%;
     left: 50%;
@@ -33,6 +35,7 @@
   @include m.body3;
   z-index: 2;
   margin: 6px;
+  white-space: nowrap;
 }
 .background {
   width: 100%;
